--- a/mail.css
+++ b/mail.css
@@ -15,13 +15,13 @@ input[type^="text"]:focus,textarea:focus {background:#eee; border-color:#999;}
 .nav a{color:#d5d5d5;text-decoration:none;}
 .nav a:hover{color:#690;text-decoration:none;}
 .nav li{float:left;list-style:none;margin:0 15px;padding:15px 0;}
-.top{background-color:#f0f2f5;position:relative;background:url(./bg.jpg) no-repeat center;background-size:cover;}
-.state{position:absolute;top:64px;left:50%;margin-left:-290px;opacity:0;filter:alpha(opacity:0)}
+.top{background-color:#f0f2f5;position:relative;background:url(./bg.jpg) no-repeat center;background-size:cover;height:240px;}
+.state{position:absolute;bottom:64px;left:50%;margin-left:-290px;opacity:0;filter:alpha(opacity:0);display:none;}
 .titp{position:relative;margin:0 auto;width:300px;box-shadow:0 0 10px rgba(0,0,0,0.2);background-color:#f6f6f6;border-radius:5px;padding:15px;}
 .titi p{height:100px;border:1px solid #999;border-radius:5px;}
 .arrow{position:absolute;border:11px solid #999;border-color:#999 transparent transparent transparent; width:0;height:0;display:inline-block;top:100%;left:50%;margin-left:-11px;}
 .arrow:after{content:"";border-width:11px;box-sizing:border-box;display:inline-block;position:absolute;border:11px solid #fff;border-color:#fff transparent transparent transparent;top:50%;left:-10px;margin-top:-11px;}
-.form{margin:0 auto;max-width:600px;height:54px;padding-top:10%;}
+.form{margin:0 auto;max-width:600px;height:54px;padding-top:186px;}
 .txt{margin:10px;padding:8px 12px;border-radius:2px;border:1px solid #000;min-width:300px;}
 .but{margin:10px;padding:8px 12px;border-radius:2px;color:#fff;box-shadow:1px 1px 10px rgba(0,0,0,0.1);display:line-block;margin-bottom:0;white-space:nowrap;-webkit-user-select:none;-moz-user-select:none;user-select:none;cursor:pointer;background-image:none;border:1px solid transparent;}
 .tmBut{background-color:#c40000;border-color:#c40000;}
